[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-inspector-tool"
version = "0.1.0"
description = "A comprehensive data cleaning, exploration, and visualisation toolkit with DataInspector and PlottingMethods classes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Dulara", email = "dulara@gmail.com" }
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scipy>=1.7",
  "scikit-learn>=1.0",
  "pydantic>=2.0",
  "networkx>=2.6",
  "graphviz>=0.20",
  "requests>=2.26"
]

# Optional extras
# pip install data-inspector-tool[plotting]
# pip install data-inspector-tool[colab]
[project.optional-dependencies]
plotting = ["plotly>=5.0"]
colab = ["google-colab"]

[project.urls]
Repository = "https://github.com/dulara/data-inspector-tool"

[tool.setuptools]
packages = ["data_analysis"]
